config/admissionpolicy-aif/base/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: usernaut-aif-cr-name-prefix
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:
          - operator.dataverse.redhat.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - groups
  validations:
    - expression: object.spec.group_name.startsWith('aif')
      message: Group spec.group_name must start with 'aif'
